test/data/valid-messages/array-of-array-of-uint32.message
# Message with an array of array of uint32

VALID_HEADER
FIELD_NAME name
TYPE STRING
STRING 'org.freedesktop.Foo'
END_LENGTH Header
ALIGN 8
START_LENGTH Body

TYPE ARRAY
TYPE ARRAY

LENGTH Array
START_LENGTH Array

## array of uint32
TYPE UINT32
LENGTH SubArray1
START_LENGTH SubArray1
UINT32 1
UINT32 2
UINT32 3
END_LENGTH SubArray1

## array of uint32
TYPE UINT32
LENGTH SubArray2
START_LENGTH SubArray2
UINT32 4
UINT32 5
END_LENGTH SubArray2

END_LENGTH Array

END_LENGTH Body
